HW WK 6 half done

--- a/main.tex
+++ b/main.tex
@@ -1385,7 +1385,7 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
             \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 20\% of the filing fee, including a 20\% reduction of any "page fees".  --- \textbf{False}.
             \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 30\% of the filing fee, including a 30\% reduction of any "page fees". --- \textbf{True}.
             \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 50\% of the filing fee, including a 50\% reduction of any “page fees". --- \textbf{False}.
-            \item The Dutchman is (also) entitled to a reduction of the filing fee under R.7a(3) when the European patent application is filed in any language, and, where applicable, a translation into an official EPO language is filed at the same time. --- \textbf{False}.
+            \item The Dutchman is (also) entitled to a reduction of the filing fee under R.7a(3) when the European patent application is filed in any language, and, where applicable, a translation into an official EPO language is filed at the same time. --- \textbf{True}.
         \end{enumerate}
         
         \item For each of the statements below, indicate whether the statement is true or false.
@@ -1401,18 +1401,17 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
             \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed at own motion, without an invitation from the EPO, one week later.--- \textbf{True}.
             \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed six weeks of filing the application. --- \textbf{True}.
-            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed three months after of filing the application. --- \textbf{False}.
-            \item If no translation is filed within 1 month of filing the EP application in Dutch, the EPO will issue an invitation to file a translation into an official EPO language within a time limit of two months. --- \textbf{True}??? \textsc{what is legal basis for 1 month???}.
+            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed three months after of filing the application. --- \textbf{True} because EPO sends an invitation during formal examination and that will have a further 2-month time limit under \textbf{Rule 6(1) EPC} and \textbf{Rule 58 EPC}.
+            \item If no translation is filed within 1 month of filing the EP application in Dutch, the EPO will issue an invitation to file a translation into an official EPO language within a time limit of two months. --- \textbf{False}; \textbf{Rule 6(1) EPC} says EPO will do so after 2 months, not 1 month.
         \end{enumerate}
     \end{enumerate}
 
     \item % Question 2
     B4-07
     \begin{enumerate}[label=(\alph*)]
-        \item Which documents filed after filing the European patent application may a Dutch person file in Dutch?
-        \item Must a translation be filed? In what language? What period applies?
-        \item What is the consequence if a required translation is not filed?
-    \end{enumerate}
+        \item \underline{After filing} the European patent application, a Dutch person may file the following documents in Dutch: \textbf{Amendments which have to be filed within a time period}, e.g., response to \textbf{Art. 94(3)} communication, request for examination, notice of opposition, request for revocation/limitation. An example of a non-applicable ``further document'' would be third-party observations.
+        \item A translation into \textsc{EN/DE/FR} must be filed under \textbf{R. 6(2)} within 1 month of filing the document [Or, where the document is a notice of opposition or appeal, or a statement of grounds of appeal, or a petition for review, the translation may be filed \textit{within the period for filing such a notice or statement or petition, if that period expires later.}] If amendments are being filed, they have to be filed in the language of proceedings (\textbf{R. 3(2) EPC)}. 
+        \item The consequence of not filing a required translation is that the document is deemed to not have been filed at all (\textbf{Art. 14(4) EPC}). Further processing is available.    \end{enumerate}
 
     \item % Question 3
     B4-08 \quad T/F question (Basic selection) \\
@@ -1422,31 +1421,31 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \item Mr. Jansen, a Dutch national living in the Netherlands, wants to file an opposition against European patent EP1. \\
         For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item Mr. Jansen may file the notice of opposition in Dutch.
-            \item Mr. Jansen may file the notice of opposition in English.
-            \item Mr. Jansen may file the notice of opposition in German.
-            \item Mr. Jansen may file the notice of opposition in Chinese.
-            \item Mr. Jansen may file the notice of opposition in Korean.
+            \item Mr. Jansen may file the notice of opposition in Dutch. --- \textbf{True}
+            \item Mr. Jansen may file the notice of opposition in English. --- \textbf{True}
+            \item Mr. Jansen may file the notice of opposition in German. --- \textbf{True}
+            \item Mr. Jansen may file the notice of opposition in Chinese. --- \textbf{False}
+            \item Mr. Jansen may file the notice of opposition in Korean. --- \textbf{False}
         \end{enumerate}
         
         \item Mr. Xiao, a Chinese national living in the Netherlands, wants to file an opposition against European patent EP1. \\
         For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item Mr. Xiao may file the notice of opposition in Dutch.
-            \item Mr. Xiao may file the notice of opposition in English.
-            \item Mr. Xiao may file the notice of opposition in German.
-            \item Mr. Xiao may file the notice of opposition in Chinese.
-            \item Mr. Xiao may file the notice of opposition in Korean.
+            \item Mr. Xiao may file the notice of opposition in Dutch. --- \textbf{True}
+            \item Mr. Xiao may file the notice of opposition in English. --- \textbf{True}
+            \item Mr. Xiao may file the notice of opposition in German. --- \textbf{True}
+            \item Mr. Xiao may file the notice of opposition in Chinese. --- \textbf{False} -- even though he is Chinese, he is resident in \textsc{NL}, meaning the \textit{``language of \textbf{that state}''} referred to in \textbf{Art. 14(4)} refers to Dutch, not Chinese.
+            \item Mr. Xiao may file the notice of opposition in Korean. --- \textbf{False}
         \end{enumerate}
         
         \item Mrs. Lee, a Korean national living in Korea, wants to file an opposition against European patent EP1 via Mr. Koch, her European patent attorney based in Munich. \\
         For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item Mrs. Lee may file the notice of opposition in Dutch through Mr. Koch.
-            \item Mrs. Lee may file the notice of opposition in English through Mr. Koch.
-            \item Mrs. Lee may file the notice of opposition in German through Mr. Koch.
-            \item Mrs. Lee may file the notice of opposition in Chinese through Mr. Koch.
-            \item Mrs. Lee may file the notice of opposition in Korean through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in Dutch through Mr. Koch. --- \textbf{False}
+            \item Mrs. Lee may file the notice of opposition in English through Mr. Koch. --- \textbf{True}
+            \item Mrs. Lee may file the notice of opposition in German through Mr. Koch. --- \textbf{True}
+            \item Mrs. Lee may file the notice of opposition in Chinese through Mr. Koch. --- \textbf{False}
+            \item Mrs. Lee may file the notice of opposition in Korean through Mr. Koch. --- \textbf{False}
         \end{enumerate}
     \end{enumerate}
 
@@ -1496,8 +1495,8 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     During the examination procedure, the English texts of EP1 and EP2 are found to contain translation errors.
     
     \begin{enumerate}[label=(\alph*)]
-        \item Would it be possible to correct these errors for EP1?
-        \item Would it be possible to correct these errors for EP2?
+        \item Would it be possible to correct these errors for EP1? --- \textbf{Yes}, according to \textbf{Art. 14(2) EPC}, the translation of the text in an official EPO language may be brought into conformity with the EP application as filed in the original language. In this case, EP1 was filed in Italian, so the translation can be corrected at any time. 
+        \item Would it be possible to correct these errors for EP2? --- \textbf{No}, as \textbf{Art. 14(2) EPC} -- and \textbf{R. 139 EPC} more generally -- only pertain to documents filed with the EPO. As such, the priority documents cannot be used for the purposes of correcting a translation error (see also case law of \textsc{G 3/89} and \textsc{G 11/91} and \textsc{GL H--VI, 2.2.1}). A possible remedy might be to re-file the application if the priority year still hasn't passed. 
     \end{enumerate}
 
     \item % Question 6
