HW WK 6 nearly there

--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{lmodern}
 \usepackage{float}
 \usepackage{mathtools}
+\usepackage[dvipsnames]{xcolor}
 \setlength\parindent{0pt}
 \newcommand{\n}{\newline}
 \newcommand{\p}{\adforn{61} \ }
@@ -1461,29 +1462,29 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \begin{enumerate}[label=(\alph*)]
         \item For each of the statements below, indicate whether the statement with regard to the letter is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item The letter is filed in a non-admissible language, so the letter is deemed not filed.
-            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into English.
-            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German.
-            \item If the applicant fails to file a translation within the required time limit, the letter is deemed not filed.
-            \item If the applicant fails to file a translation of the letter nor of the claims within the required time limit, the application is deemed withdrawn.
+            \item The letter is filed in a non-admissible language, so the letter is deemed not filed. --- \textbf{False}
+            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into English. --- \textbf{False} --- \textbf{R. 3(1) EPC} allows the translation to be into any official EPO language, i.e., \textsc{EN/DE/FR}. 
+            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German. --- \textbf{True}.
+            \item If the applicant fails to file a translation within the required time limit, the letter is deemed not filed. --- \textbf{True} --- it is \underline{deemed not filed} as \textit{per} \textbf{Art. 14(4) EPC}.
+            \item If the applicant fails to file a translation of the letter nor of the claims within the required time limit, the application is deemed withdrawn. --- \textbf{True} --- failure to respond to \textit{any} communication from the ED on time leads to withdrawal -- \textbf{Art. 94(4) EPC}. 
         \end{enumerate}
         
         \item For each of the statements below, indicate whether the statement with regard to the Annex with amendments to the claims is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item The claims are filed in a non-admissible language, so the amended claims are deemed not filed.
-            \item A translation of the amended claims has to be filed within 1 month of filing the amended claims. The translation has to be into English.
-            \item A translation of the amended claims has to be filed within 1 month of filing the amended claims. The translation has to be into any one of English, French or German.
-            \item If the applicant fails to file a translation within the required time limit, the amended claims are deemed not filed.
-            \item If the applicant fails to file a translation of the claims nor of the letter within the required time limit, the application is deemed withdrawn.
+            \item The claims are filed in a non-admissible language, so the amended claims are deemed not filed. --- \textbf{False} --- the guy is an \textbf{Art. 14(4)} person, so he can use Swedish in this case and needs to file a translation into English.
+            \item \colorbox{Thistle}{A translation of the} amended claims has to be filed within 1 month of filing the amended claims. The translation has to be into English. --- \textbf{True} --- \underline{Complicated issue}. \textbf{Art. 14(4) EPC} prevails here over \textbf{R. 3(2)}; i.e, the \textbf{amendments themselves} may be filed in Swedish, but the translation has to be into language of proceedings, i.e., \textsc{EN}.
+            \item \colorbox{Thistle}{A translation of the amended claims} has to be filed within 1 month of filing the amended claims. The translation has to be into any one of English, French or German. --- \textbf{False} --- \textbf{R. 3(2)} specifies it's the language of proceedings, and the claims are part of the ``application'' proper, not just further documents relating to it.
+            \item If the applicant fails to file a translation within the required time limit, the amended claims are deemed not filed. --- \textbf{True} --- the amended claims in response to a communication with a time period become an \textbf{Art. 14(4) EPC} document and they will be \textit{deemed to have never been filed}.
+            \item If the applicant fails to file a translation of the claims nor of the letter within the required time limit, the application is deemed withdrawn. --- \textbf{True} --- simply \textbf{Art. 94(4) EPC}.
         \end{enumerate}
         
         \item For each of the statements below, indicate whether the statement with regard to the Annex with the Japanese patent application is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item The Japanese patent application is filed in a non-admissible language, so the Japanese patent application is deemed not filed.
-            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into English.
-            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German.
-            \item If the applicant fails to file a translation within the required time limit, the Japanese patent application is deemed not filed.
-            \item If the applicant fails to file a translation within the required time limit, the application is deemed withdrawn.
+            \item The Japanese patent application is filed in a non-admissible language, so the Japanese patent application is deemed not filed. --- \textbf{False} --- this document is considered \textbf{evidence}, and provisions of \textbf{R. 3(3) EPC} apply to it; meaning it can be filed in any language.
+            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into English.  --- \textbf{False} --- into any official EPO language \textit{if EPO requests it under \textbf{R. 3(3) EPC}}.
+            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German. --- \textbf{False} --- into any official EPO language \textit{if EPO requests it under \textbf{R. 3(3) EPC}}.
+            \item If the applicant fails to file a translation within the required time limit, the Japanese patent application is deemed not filed.  --- \textbf{False} --- the EPO \textit{may disregard it} under \textbf{R. 3(3) EPC}.
+            \item If the applicant fails to file a translation within the required time limit, the application is deemed withdrawn. --- \textbf{False}.
         \end{enumerate}
     \end{enumerate}
 
