--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,8 @@
 \newcommand{\n}{\newline}
 \newcommand{\p}{\adforn{61} \ }
 \newcommand{\s}{\adforn{74} \ }
-
+\newcommand{\T}{--- \textbf{True} }
+\newcommand{\F}{--- \textbf{False} }
 
 
 \begin{document}
@@ -1503,39 +1504,41 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \item % Question 6
     B5-08 \quad T/F question (Basic selection) \\
     A Dutch national lives in the USA and wishes to file a European patent application.
-    
+   
     \begin{enumerate}[label=(\alph*)]
         \item For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item He does not need to appoint a professional representative for filing a European patent application in Dutch at the EPO, but he can do so.
-            \item He does not need to appoint a professional representative for filing a European patent application in English at the EPO, but he can do so.
+            \item He does not need to appoint a professional representative for filing a European patent application in Dutch at the EPO, but he can do so. \T  --- \textbf{Art. 133(2) EPC}.
+            \item He does not need to appoint a professional representative for filing a European patent application in English at the EPO, but he can do so. \T  --- \textbf{Art. 133(2) EPC}.
         \end{enumerate}
         
         \item For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO, but he can do so.
-            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO if he pays the fees simultaneously with filing the application, but he shall appoint a professional representative when the fees are paid later.
-            \item He is obliged to let a professional representative pay the filing fee and search fee to the EPO.
+            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO, but he can do so. \T
+            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO if he pays the fees simultaneously with filing the application, but he shall appoint a professional representative when the fees are paid later. \F
+            \item He is obliged to let a professional representative pay the filing fee and search fee to the EPO. \F
         \end{enumerate}
         
         \item \textit{The Dutch national living in the USA files a European patent application at the EPO in Dutch.} \\
         For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item He does not need to appoint a professional representative when he files a translation in English 3 weeks after the filing date, but he can do so.
-            \item He does not need to appoint a professional representative when he files a translation in English simultaneously with filing the application in Dutch.
+            \item He does not need to appoint a professional representative when he files a translation in English 3 weeks after the filing date, but he can do so. \F --- for \textbf{anything} \underline{after} the filing, he needs professional representation.
+            \item He does not need to appoint a professional representative when he files a translation in English simultaneously with filing the application in Dutch. \T -- it was done \underline{at the same time} as filing so he can do it.
         \end{enumerate}
         
         \item \textit{The Dutch national files only a fully completed request form, but does not file a description nor a reference to a previously filed application, nor any claims.} \\
         For the statement below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item He does not need to appoint a professional representative when he files a description 5 days after having filed the request form.
+            \item He does not need to appoint a professional representative when he files a description 5 days after having filed the request form. \T
         \end{enumerate}
         
         \item \textit{The Dutch national files only a fully completed request form as well as a description but no claims.} \\
         For the statement below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item He does not need to appoint a professional representative when he files a set of claims 5 days after having filed the request form.
+            \item He does not need to appoint a professional representative when he files a set of claims 5 days after having filed the request form. \F
         \end{enumerate}
+        
+        \nt{Prof. rep. at filing}{If something is done at the step of filing (before having a filing date), no representation is needed. However, for a US resident, a representative must be appointed for all the steps (other than payment of the fees) after a filing date has been accorded.}
     \end{enumerate}
 
     \item % Question 7
@@ -1543,11 +1546,11 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     Who is deemed to be the common representative for a European patent application with three applicants, where no common representative has been appointed, in the following situations?
     
     \begin{enumerate}[label=(\alph*)]
-        \item All applicants are from a Contracting State and none has appointed a professional representative.
-        \item All applicants are from a Contracting State and applicant 3 has appointed a professional representative.
-        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; no professional representative has been appointed.
-        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 1 has appointed a professional representative.
-        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 3 has appointed a professional representative.
+        \item All applicants are from a Contracting State and none has appointed a professional representative. --- the first named Applicant will be the deemed common representative under \textbf{R. 151(1) EPC}. 
+        \item All applicants are from a Contracting State and applicant 3 has appointed a professional representative. --- the first named Applicant will be the deemed common representative under \textbf{R. 151(1) EPC}. 
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; no professional representative has been appointed. --- Applicants 1 and 3 are not obliged to have a professional representative. Applicant 2 is obliged to have a professional representative under \textbf{Art. 133(2) EPC}, but he hasn't named one yet. Once he names one, his prof. rep. will become the common rep. 
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 1 has appointed a professional representative. -- in this case, Applicant 1 (from CS) has an appointed professional representative, so they override anything from Applicant 2 from non-CS state [\textbf{R. 151(1) EPC}].
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 3 has appointed a professional representative. --- Applicants 1 and 3 are not obliged to have a professional representative. Applicant 2 is obliged to have a professional representative under \textbf{Art. 133(2) EPC}. Even though Applicant 3 has named one, they weren't \underline{\textit{obliged}} to do so. So professional rep. of Applicant 2 \underline{must} be appointed and will be the common rep. 
     \end{enumerate}
 
 \end{enumerate}
