--- a/main.tex
+++ b/main.tex
@@ -1554,8 +1554,128 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \end{enumerate}
 
 \end{enumerate}
-\end{enumerate}
+\section{November 03, 2025}
 
+\begin{enumerate}[label=\textbf{Answer \arabic*}]
+
+    \item % Question 1
+    C7-11 \qquad T/F question (Basic selection) \\
+    A European application EP1 claims priority from a first, earlier patent application FR1 disclosing feature C and a second, earlier patent application DE1 disclosing feature D. None of the earlier applications discloses the combination of features C and D. FR1 does not disclose feature D in isolation either. \\
+    The filing dates of FR1, DE1 and EP1 are 12 January 2022, 12 February 2022 and 18 December 2022, respectively.
+    
+    \vspace{1em}
+    Claim 1 of the European patent application EP1 defines the combination of features C and D. \\
+    Claim 2 of the European patent application EP1 defines individual feature D.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The effective date of claim 1 of EP1 is the filing date of FR1. \F
+        \item The effective date of claim 1 of EP1 is the filing date of DE1. \F
+        \item The effective date of claim 1 of EP1 is the filing date of EP1. \T
+        \item The effective date of claim 2 of EP1 is the filing date of EP1. \F
+    \end{enumerate}
+    
+    \vspace{1em}
+    A further European application EP2 claims priority from FR1, DE1 and EP1.
+    
+    \vspace{0.5em}
+    Claim 1 of the European patent application EP2 defines the combination of features C and D. \\
+    Claim 2 of the European patent application EP2 defines individual feature D.
+    
+    \vspace{0.5em}
+    The filing date of EP2 is 11 January 2023.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*), resume]
+        \item The effective date of claim 1 of EP2 is the filing date of DE1. \F
+        \item The effective date of claim 1 of EP2 is the filing date of EP1. \T
+        \item The effective date of claim 2 of EP2 is the filing date of DE1. \T
+        \item The effective date of claim 2 of EP2 is the filing date of EP1. \F
+    \end{enumerate}
+
+    \vspace{1em}
+    A further European application EP3 claims priority from FR1, DE1, EP1 and EP2.
+    
+    \vspace{0.5em}
+    Claim 1 of the European patent application EP3 defines the combination of features C and D. \\
+    Claim 2 of the European patent application EP3 defines individual feature D.
+    
+    \vspace{0.5em}
+    The filing date of EP3 is 17 December 2023.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*), resume]
+        \item The effective date of claim 1 of EP3 is the filing date of EP1. \T
+        \item The effective date of claim 1 of EP3 is the filing date of EP3. \F
+        \item The effective date of claim 2 of EP3 is the filing date of DE1. \F
+        \item The effective date of claim 2 of EP3 is the filing date of EP3. \T --- the \textit{first application} disclosing subject-matter \textsc{D} was \textsc{DE1}, and it is too late to claim it now (cannot do it off \textsc{EP1} or \textsc{EP2} as they were \textbf{not the first application} for the same invention/subject-matter. 
+    \end{enumerate}
+
+    \item % Question 2
+    C7-13 (Basic Selection) \\
+    An applicant filed a first patent application SE1 describing and claiming a mosquito repellent comprising a combination of compounds C and K, which causes the mosquito repellent to very efficiently keep mosquitos at a distance. After further experimentation, the applicant found that the mosquito repellent is also very efficient in keep mosquitos at a distance if instead of K, a compound L is used. The applicant compiled a new European application EP2 by taking the full description of SE1, adding the newly found mosquito repellent comprising a combination of compounds and L to the description, and claiming a mosquito repellent comprising a combination of compounds C and at least one of K and L. The applicant duly filed the new European application EP2 at the end of the priority period, while claiming priority from SE1. \\
+    A few months after filing SE1, the applicant handed out samples of his mosquito repellent comprising a combination of compounds C and K at an outdoor event in Sweden. \\
+    Is the hand-out of the samples at the outdoor event in Sweden novelty-destroying for the claim of EP2?
+
+    \item % Question 3
+    C7-14 (Basic Selection) \\
+    An applicant filed a first patent application NL1 claiming a new and inventive process P comprising a heating step at a temperature of 100-150°C, and describing process P with experimental data at 110°C and 140°C. After further experimentation, the applicant found that the process also gives very satisfactory results at temperatures down to 70°C and up to 250°C. The applicant compiled a new European application EP2 by taking the description of NL1, adding experimental data at 70°C and 250°C to the description, and replacing the range 100-150°C in the claim by 70-250°C. The applicant duly filed the new European application EP2 at the end of the priority period, while claiming priority from NL1. \\
+    A few months after filing NL1, the applicant published details about his new and inventive process P at a temperature of 120°C at a scientific conference. \\
+    Is the publication at the conference novelty-destroying for the claim of EP2?
+
+    \item % Question 4
+    C7-18 (Basic selection) \\
+    A French Company X filed a French patent application A-FR in July 2023. Inventor I1 employed by Company X and inventor I2 employed by the Spanish Company Y were named as inventors. \\
+    Today, 21 March 2024, a European patent application EP was filed by Company Y in its name only, claiming the priority of A-FR in accordance with Art.88(1), R.52 and 53 EPC, and designating inventor I2 as the sole inventor.
+    \begin{enumerate}[label=(\alph*)]
+        \item What is the priority situation today?
+        \item Would your answer have been different if EP had been filed by Companies X and Y as joint applicants?
+    \end{enumerate}
+
+    \item % Question 5
+    C7-21 - T/F question (Basic selection) \\
+    A German patent application DE1 was filed in a hurry by a German applicant. Two months later the applicant filed a better-compiled German patent application DE2 for the same subject-matter. DE1 and the priority right that originated from its filing were duly withdrawn "without leaving any rights outstanding" before DE2 is filed. Six months later a European patent application EP1 is filed claiming priority of DE2. Two months later the same applicant filed a second European patent application EP2 claiming priority of DE1.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*)]
+        \item EP1 validly claims priority from DE2.
+        \item EP2 validly claims priority from DE1.
+    \end{enumerate}
+
+    \item % Question 6
+    C7-24 \qquad T/F question \\
+    A European patent application EP1 is filed on 29 July 2017 indicating a priority date of 29 January 2017. Shortly after the filing of EP1, the applicant recognized that the priority date that was given is incorrect. The applicant wants to correct the priority date to 27 September 2016.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The declaration of priority shall be made on filing and cannot be corrected.
+        \item The declaration of priority may be corrected until 29 November 2017.
+        \item The declaration of priority may be corrected until 29 January 2018.
+        \item The declaration of priority may be corrected until 29 May 2018.
+    \end{enumerate}
+
+    \item % Question 7
+    C7-29 \\
+    On 14 December 2022 you filed a European patent application EP2 claiming priority from a European patent application EP1 filed on 17 August 2022. Today, 7 March 2023, you received a telephone call from your client who instructs you also to claim priority from a German utility model filed on 19 December 2021.
+    \begin{enumerate}[label=(\alph*)]
+        \item Is this possible? If so, what is the last date on which the applicant can add the priority claim?
+    \end{enumerate}
+    
+    \vspace{1em}
+    Your client further informs you that the certified copy of the priority document of the German utility model will not be issued by the German Patent and Trademark Office before 10 May 2023.
+    \begin{enumerate}[label=(\alph*), resume]
+        \item What can you undertake?
+    \end{enumerate}
+
+\end{enumerate}
+\end{enumerate}
 
 
 \end{document}
