--- a/main.tex
+++ b/main.tex
@@ -1621,19 +1621,31 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     A few months after filing SE1, the applicant handed out samples of his mosquito repellent comprising a combination of compounds C and K at an outdoor event in Sweden. \\
     Is the hand-out of the samples at the outdoor event in Sweden novelty-destroying for the claim of EP2?
 
+
+\p No, the outdoor event in Sweden is not novelty destroying for the claim 1 of \textsc{EP2}.  \\
+\p \textsc{EP2} discloses combinations CK, CL and CKL. It can only claim prio. from \textsc{SE1} on CK. \\
+\p Outdoor event only showed CK, so CK is sitll novel. \\
+\p Outdoor event is prior art for CKL and CL, but since CK is novel, the whole claim 1 of \textsc{EP2} is novel.
+
     \item % Question 3
     C7-14 (Basic Selection) \\
     An applicant filed a first patent application NL1 claiming a new and inventive process P comprising a heating step at a temperature of 100-150°C, and describing process P with experimental data at 110°C and 140°C. After further experimentation, the applicant found that the process also gives very satisfactory results at temperatures down to 70°C and up to 250°C. The applicant compiled a new European application EP2 by taking the description of NL1, adding experimental data at 70°C and 250°C to the description, and replacing the range 100-150°C in the claim by 70-250°C. The applicant duly filed the new European application EP2 at the end of the priority period, while claiming priority from NL1. \\
     A few months after filing NL1, the applicant published details about his new and inventive process P at a temperature of 120°C at a scientific conference. \\
     Is the publication at the conference novelty-destroying for the claim of EP2?
 
+\p No, the conference is not novelty destroying for the claim 1 of \textsc{EP2}.  \\
+\p \textsc{EP2} can claim prio. for range 100--150. It then adds an "\textsc{or}" to its claim by including also ranges 70--100 and 150--250. \\
+\p The conference spoils range 100--150 by disclosing 120. But this was secured with prio. claim. The conference doesn't spoil either the range 70--100 or 150--250. \\
+\p So since neither of the 3 ranges is spoiled, the whole claim of \textsc{EP2} is novel. 
+
     \item % Question 4
     C7-18 (Basic selection) \\
     A French Company X filed a French patent application A-FR in July 2023. Inventor I1 employed by Company X and inventor I2 employed by the Spanish Company Y were named as inventors. \\
     Today, 21 March 2024, a European patent application EP was filed by Company Y in its name only, claiming the priority of A-FR in accordance with Art.88(1), R.52 and 53 EPC, and designating inventor I2 as the sole inventor.
     \begin{enumerate}[label=(\alph*)]
-        \item What is the priority situation today?
-        \item Would your answer have been different if EP had been filed by Companies X and Y as joint applicants?
+        \item The priority situation today is that the EPO will work off the \textit{rebuttable presumption} that there was an agreement between the parties and that, in this case, the French company X transferred rights to the Spanish company Y, and Y can validly claim priority (we are in the prio. year) because it is the presumed "same" Applicant (see also \textsc{G 1/22} and \textsc{G 2/22}). 
+        \item If EP had been filed by Companies X and Y as joint applicants, then it is fine anyway, becase \textbf{you can always add Applicants; but you can't remove them} without "transfer" of rights being mentioned in the question. If there is no "transfer," just assume it was legit! \\
+\textsc{Inventors are irrelevant for priority!}
     \end{enumerate}
 
     \item % Question 5
@@ -1643,8 +1655,9 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \vspace{1em}
     For each of the statements below, indicate whether the statement is true or false.
     \begin{enumerate}[label=(\alph*)]
-        \item EP1 validly claims priority from DE2.
-        \item EP2 validly claims priority from DE1.
+        \item EP1 validly claims priority from DE2. \T --- \textbf{Art. 87(4) EPC} exception applies.
+        \item EP2 validly claims priority from DE1. \F --- \textbf{Art. 87(4) EPC} exception does not apply (last sentence rules out using DE1 ever again). \\
+\p Nonetheless, the declaration of priority may be corrected within 16 months of the earliest priority date in question under \textbf{R. 52(3) EPC}. In this case, only 8 months have passed since DE1, so he can still use it to claim prio. from the withdrawn DE1.
     \end{enumerate}
 
     \item % Question 6
