--- a/main.tex
+++ b/main.tex
@@ -1668,23 +1668,23 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item The declaration of priority shall be made on filing and cannot be corrected.
-        \item The declaration of priority may be corrected until 29 November 2017.
-        \item The declaration of priority may be corrected until 29 January 2018.
-        \item The declaration of priority may be corrected until 29 May 2018.
+        \item The declaration of priority shall be made on filing and cannot be corrected. \F --- \textbf{R. 52(3) EPC} explicitly provides for correcting a priority date within \textbf{\textit{the later of}}: \textbf{(i)} 16 months of the \underline{earliest} of claimed priority dates; or \textbf{(ii)} 4 months from filing date of EP application.
+        \item The declaration of priority may be corrected until 29 November 2017. \F --- this is the 4 months from EP filing, but it's the earlier of (i) or (ii).
+        \item The declaration of priority may be corrected until 29 January 2018. \T --- this is 16 months from the earliest mentioned priority date claim.
+        \item The declaration of priority may be corrected until 29 May 2018. \F
     \end{enumerate}
 
     \item % Question 7
     C7-29 \\
     On 14 December 2022 you filed a European patent application EP2 claiming priority from a European patent application EP1 filed on 17 August 2022. Today, 7 March 2023, you received a telephone call from your client who instructs you also to claim priority from a German utility model filed on 19 December 2021.
     \begin{enumerate}[label=(\alph*)]
-        \item Is this possible? If so, what is the last date on which the applicant can add the priority claim?
+        \item Is this possible? If so, what is the last date on which the applicant can add the priority claim? \T --- this is possible, because 16 months from the \textsc{DE} utility model runs out on 19.04.2023, so we still have over a month to add a priority claim to it. The German utility model falls within the priority year of \textsc{EP2}. 
     \end{enumerate}
     
     \vspace{1em}
     Your client further informs you that the certified copy of the priority document of the German utility model will not be issued by the German Patent and Trademark Office before 10 May 2023.
     \begin{enumerate}[label=(\alph*), resume]
-        \item What can you undertake?
+        \item What can you undertake? --- 10 May 2023 is after the 16-month deadline. However, under \textbf{R. 59 EPC -- \textit{Deficiencies in claiming priority}}, the EPO will send an invitation to provide the certified copy of the prio. document within \textit{a period to be specificed}. This period cannot be shorter than \textbf{2m} or longer than \textbf{4m} under \textbf{R. 132(2) EPC}. This will cover the period in question here. Even if it didn't, under \textbf{R. 132(2); second sentence}, this period to be specified may be extended upon request. 
     \end{enumerate}
 
 \end{enumerate}
